objects/Area__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_Code__c</fullName>
        <externalId>true</externalId>
        <label>Area Code</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Areas</relationshipLabel>
        <relationshipName>Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centre_Name__c</fullName>
        <label>Centre Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Area__c</fullName>
        <label>Geographic Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Area</label>
    <nameField>
        <label>Centre Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>